# score_trainer

./: pyproject.toml
score_trainer/: crystal.py  download_model.py  make_train_data.py  roi_check.py  run_simdata.py  train.py  train_loader.py
